﻿*******************************************************************

   Project name : OPOS driver for Daisy FX1300
   Company name : SHTRIH-M, Russia, +7(495) 787-60-90, www.shtrih-m.ru

*******************************************************************

  OposDaisy_1.13_9.exe
  23 August 2024

  [-] Cashless refunds are prohibited
  
*******************************************************************

  OposDaisy_1.13_8.exe
  22 August 2024

  [-] Changed refund receipt. Fist cashout will be made, 
      then nonfiscal receipt printed
  
*******************************************************************

  OposDaisy_1.13_7.exe
  5 June 2024

  [-] Changed DayOpened property behavior
      DayOpened is True on driver start if no previous value stored in registry.
      DayOpened sets to True after successful beginFiscalReceipt method call.
      DayOpened sets to False after successful printZReport method call.
      Driver will keep DayOpened value after reopen.
  
*******************************************************************

  OposDaisy_1.13_6.exe
  4 June 2024

  [+] Added command retries
  [-] Fixed error with power status reporting
  [-] Changed protocol implementation to ignore invalid bytes
	  
*******************************************************************

  OposDaisy_1.13_4.exe
  27 May 2024

  [+] Added parameter "Command timeout" in seconds. 
      Default value is 30 seconds
  
*******************************************************************

  OposDaisy_1.13_3.exe
  23 May 2024

  [-] Fixed error with receipt total
  
*******************************************************************

  OposDaisy_1.13_2.exe
  16 May 2024

  [+] Added Connect button in configuration utility to check connection
  [+] Added refund receipt printing as nonfiscal receipt and cashout
  
*******************************************************************

  OposDaisy_1.13_1.exe
  27 April 2024

  [+] First version
