@@ -1,21 +1,28 @@
 [Closed Files]
-File_0=SourceModule,'D:\Projects\OposDaisy\src\OposDaisy\units\DaisyFiscalPrinter.pas',0,1,1081,36,1099,0,0
-File_1=SourceModule,'D:\Projects\OposDaisy\src\OposDaisy\units\DaisyPrinter.pas',0,1,1333,30,1347,0,0
-File_2=SourceModule,'C:\Program Files (x86)\Borland\Delphi7\Comp\dunit-9.3.0\src\GUITestRunner.pas',0,1,20,19,38,0,0
-File_3=SourceModule,'C:\projects\OposDaisy\src\Shared\SocketPort.pas',0,1,1,81,11,0,0
-File_4=SourceModule,'C:\projects\OposDaisy\Test\OposDaisyTest\units\duDaisyFiscalPrinter.pas',0,1,167,42,176,0,0
-File_5=SourceModule,'C:\projects\OposDaisy\src\OposDaisy\units\oleFiscalPrinter.pas',0,1,1,34,11,0,0
-File_6=SourceModule,'C:\projects\OposDaisy\src\OposDaisy\units\DaisyFiscalPrinter.pas',0,1,1236,1,1239,0,0
-File_7=SourceModule,'C:\projects\OposDaisy\src\Opos\Oposhi.pas',0,1,1,1,1,0,0
-File_8=SourceModule,'C:\projects\OposDaisy\src\Opos\OposFptrhi.pas',0,1,149,23,168,0,0
-File_9=SourceModule,'C:\projects\OposDaisy\Test\OposDaisyTest\units\TestDaisyPrinter.pas',0,1,1,45,11,0,0
+File_0=SourceModule,'D:\Projects\OposDaisy\Test\AcceptanceTest\units\duDPPrintTest.pas',0,1,236,38,243,0,0
+File_1=SourceModule,'D:\Projects\OposDaisy\src\OposDaisy\units\DaisyPrinter.pas',0,1,1,46,10,0,0
+File_2=SourceModule,'D:\Projects\OposDaisy\src\OposDaisy\units\DaisyPrinterInterface.pas',0,1,146,13,163,0,0
+File_3=SourceModule,'D:\Projects\OposDaisy\Test\AcceptanceTest\units\duDPDataTest.pas',0,1,669,1,685,0,0
+File_4=SourceModule,'C:\Program Files (x86)\Borland\Delphi7\Comp\dunit-9.3.0\src\GUITestRunner.pas',0,1,20,19,38,0,0
+File_5=SourceModule,'C:\projects\OposDaisy\src\Shared\SocketPort.pas',0,1,1,81,11,0,0
+File_6=SourceModule,'C:\projects\OposDaisy\Test\OposDaisyTest\units\duDaisyFiscalPrinter.pas',0,1,167,42,176,0,0
+File_7=SourceModule,'C:\projects\OposDaisy\src\OposDaisy\units\oleFiscalPrinter.pas',0,1,1,34,11,0,0
+File_8=SourceModule,'C:\projects\OposDaisy\src\OposDaisy\units\DaisyFiscalPrinter.pas',0,1,1236,1,1239,0,0
 
 [Modules]
-Count=0
-EditWindowCount=0
+Module0=D:\Projects\OposDaisy\src\Opos\OposFptr.pas
+Module1=D:\Projects\OposDaisy\src\OposDaisy\units\DaisyFiscalPrinter.pas
+Count=2
+EditWindowCount=1
 TypeLibWindowCount=1
 
-[D:\Projects\OposDaisy\Test\OposDaisyTest\OposDaisyTestLib.dpr]
+[D:\Projects\OposDaisy\src\Opos\OposFptr.pas]
+ModuleType=SourceModule
+FormState=0
+FormOnTop=0
+
+[D:\Projects\OposDaisy\src\OposDaisy\units\DaisyFiscalPrinter.pas]
+ModuleType=SourceModule
 FormState=0
 FormOnTop=0
 
@@ -43,9 +50,55 @@ FormOnTop=0
 FormState=0
 FormOnTop=0
 
+[D:\Projects\OposDaisy\Test\OposDaisyTest\OposDaisyTestLib.dpr]
+FormState=0
+FormOnTop=0
+
 [D:\Projects\OposDaisy\Test\AcceptanceTest\AcceptanceTest.dpr]
 FormState=0
 FormOnTop=0
+
+[EditWindow0]
+ViewCount=2
+CurrentView=1
+View0=0
+View1=1
+CodeExplorer=CodeExplorer@EditWindow0
+MessageView=MessageView@EditWindow0
+Create=1
+Visible=1
+State=2
+Left=366
+Top=140
+Width=1302
+Height=682
+MaxLeft=-8
+MaxTop=107
+MaxWidth=1936
+MaxHeight=941
+ClientWidth=1920
+ClientHeight=902
+LeftPanelSize=0
+LeftPanelClients=CodeExplorer@EditWindow0
+LeftPanelData=00000400010000000C000000436F64654578706C6F7265720000000000000000000000000000000000FFFFFFFF
+RightPanelSize=0
+BottomPanelSize=0
+BottomPanelClients=MessageView@EditWindow0
+BottomPanelData=00000400010000000B0000004D657373616765566965770000000000000000000000000000000000FFFFFFFF
+
+[View0]
+Module=D:\Projects\OposDaisy\src\OposDaisy\units\DaisyFiscalPrinter.pas
+CursorX=24
+CursorY=18
+TopLine=1
+LeftCol=1
+
+[View1]
+Module=D:\Projects\OposDaisy\src\Opos\OposFptr.pas
+CursorX=29
+CursorY=232
+TopLine=214
+LeftCol=1
 
 [TypeLibEditWindow0]
 Create=1
@@ -70,8 +123,8 @@ WatchShowColumnHeaders=1
 Create=1
 Visible=0
 State=0
-Left=0
-Top=960
+Left=239
+Top=694
 Width=492
 Height=142
 MaxLeft=-1
@@ -92,9 +145,9 @@ Count=0
 Create=1
 Visible=1
 State=2
-Left=2
+Left=0
 Top=0
-Width=1918
+Width=1920
 Height=123
 MaxLeft=-1
 MaxTop=-1
@@ -109,12 +162,12 @@ Visible=1
 State=0
 Left=-4
 Top=114
-Width=590
-Height=630
+Width=509
+Height=622
 MaxLeft=-1
 MaxTop=-1
-ClientWidth=574
-ClientHeight=591
+ClientWidth=493
+ClientHeight=583
 TBDockHeight=681
 LRDockWidth=445
 Dockable=0
@@ -153,8 +206,8 @@ ClientHeight=60
 Create=1
 Visible=1
 State=0
-Left=-13
-Top=174
+Left=-8
+Top=118
 Width=364
 Height=668
 MaxLeft=-1
@@ -199,12 +252,12 @@ State=0
 Left=0
 Top=12
 Width=856
-Height=484
+Height=677
 MaxLeft=-1
 MaxTop=-1
 ClientWidth=856
-ClientHeight=484
-TBDockHeight=484
+ClientHeight=677
+TBDockHeight=677
 LRDockWidth=320
 Dockable=1
 
@@ -246,17 +299,17 @@ Dockable=1
 
 [DebugLogView]
 Create=1
-Visible=0
+Visible=1
 State=0
-Left=402
-Top=596
+Left=0
+Top=1040
 Width=436
 Height=917
 MaxLeft=-1
 MaxTop=-1
 ClientWidth=420
 ClientHeight=878
-TBDockHeight=164
+TBDockHeight=1
 LRDockWidth=445
 Dockable=1
 
@@ -352,6 +405,38 @@ TBDockHeight=151
 LRDockWidth=383
 Dockable=1
 
+[CodeExplorer@EditWindow0]
+Create=1
+Visible=0
+State=0
+Left=-170
+Top=-9
+Width=140
+Height=305
+MaxLeft=-1
+MaxTop=-1
+ClientWidth=140
+ClientHeight=305
+TBDockHeight=305
+LRDockWidth=140
+Dockable=1
+
+[MessageView@EditWindow0]
+Create=1
+Visible=0
+State=0
+Left=-176
+Top=-707
+Width=443
+Height=85
+MaxLeft=-1
+MaxTop=-1
+ClientWidth=443
+ClientHeight=85
+TBDockHeight=85
+LRDockWidth=443
+Dockable=1
+
 [DockHosts]
 DockHostCount=1
 
@@ -360,20 +445,20 @@ DockSiteType=0
 Create=1
 Visible=0
 State=0
-Left=839
-Top=202
+Left=860
+Top=192
 Width=872
-Height=535
+Height=728
 MaxLeft=-1
 MaxTop=-1
 ClientWidth=856
-ClientHeight=496
+ClientHeight=689
 TBDockHeight=690
 LRDockWidth=328
 Dockable=1
 DockClients=CallStackWindow
-DockSiteData=0000040000000000F001000000000000015803000000000000010000000087000000000000000100000002F0010000000000000200000000580300000F00000043616C6C537461636B57696E646F770200000000F7010000000000000100000000080100000000000001000000008C010000000000000100000000100200000000000001000000009802000000000000FFFFFFFF
+DockSiteData=0000040000000000B102000000000000015803000000000000010000000087000000000000000100000002B1020000000000000200000000580300000F00000043616C6C537461636B57696E646F770200000000F7010000000000000100000000080100000000000001000000008C010000000000000100000000100200000000000001000000009802000000000000FFFFFFFF
 
 [ActiveProject]
-ActiveProject=5
+ActiveProject=3
 
