@@ -5,6 +5,13 @@
 
 *******************************************************************
 
+  OposDaisy_1.13_10.exe
+  09 September 2024
+
+  [+] Added request getData(FPTR_GD_GRAND_TOTAL)
+  
+*******************************************************************
+
   OposDaisy_1.13_9.exe
   23 August 2024
 
